--- a/frontend/src/components/user/LoginRegister/LoginRegister.css
+++ b/frontend/src/components/user/LoginRegister/LoginRegister.css
@@ -77,6 +77,7 @@
     letter-spacing: 1px;
     padding: 4px;
     text-align: center;
+    font-weight: 100;
   }
   .register_form{
     width: 100%;
@@ -141,12 +142,14 @@
   }
   /* Adjusted styles for password toggle */
   .toggle-password {
+    margin-top: 5px;
     display: flex;
     align-items: center;
     font-size: 12px;
     padding-left: 12px;
     padding-top: 5px;
     color: rgb(98, 97, 97);
+    cursor: pointer;
   
   }
   .toggle-password input {
